--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.10.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.524.0",
     "motion": "^12.19.2",
